# zeta-26-engine

./: .gitignore  .nojekyll  AGENTS.md  FRONTEND_INTEGRATION.md  README.md  RULES.md  TODO.md  challenge.md  constraints.md  equations.md  multiverse-config.json  optimize.md  project.md  system architecture.md  system-architecture.md
.github/workflows/: ci.yml  deploy.yml
benchmarks/: README.md  raw-data.md
docs/: TODO.md  project.md  system-architecture.md
docs/benchmarks/: README.md  raw-data.md  speed-chart.md
src-rust/: Cargo.toml
src-rust/pkg/: package.json  zeta_26_engine.js  zeta_26_engine_bg.wasm  zeta_26_engine_bg.wasm.d.ts
src-rust/src/: codex_translator.rs  config_parser.rs  graph_builder.rs  lib.rs  network_state.rs  physics_engine.rs  router.rs
ui-wrapper/: next.config.js  package.json  tsconfig.json
ui-wrapper/app/: globals.css  layout.tsx  not-found.tsx  page.tsx
ui-wrapper/components/: ErrorBoundary.tsx  LandingPage.tsx  PlanetList.tsx  SendCard.tsx  Sidebar.tsx  TelemetryPanel.tsx  TopBar.tsx  UniverseCanvas.tsx
ui-wrapper/lib/: engine.tsx  types.ts  validation.ts
ui-wrapper/pkg/: zeta_26_engine.d.ts  zeta_26_engine.js  zeta_26_engine_bg.wasm
ui-wrapper/tests/: security.test.ts  wasm-health.test.ts  wasm.multiverse.test.ts  wasm.stress.test.ts  wasm.test.ts  wasm.unit.test.ts  wasm.universe.test.ts
